@@ -822,13 +822,16 @@ AC_DO_DISABLER(non-free,   NON_FREE,   [Disables non-free runtime library parts]
 AC_DO_ENABLER(doc,   DOC,   [Enables building the documentation])
 AC_CHECK_PROG([LYX],        [lyx],        [lyx],        [:])
 AC_CHECK_PROG([LATEX2HTML], [latex2html], [latex2html], [:])
+AC_CHECK_PROG([LATEX],      [latex],      [latex],      [:])
+AC_CHECK_PROG([DVIPDFM],    [dvipdfm],    [dvipdfm],    [:])
 AC_CHECK_PROG([PDFLATEX],   [pdflatex],   [pdflatex],   [:])
 AC_CHECK_PROG([MAKEINDEX],  [makeindex],  [makeindex],  [:])
 
 if test $OPT_ENABLE_DOC = 1; then
   SDCC_REQUIRE_PROG($LYX,        lyx)
   SDCC_REQUIRE_PROG($LATEX2HTML, latex2html)
-  SDCC_REQUIRE_PROG($PDFLATEX,   pdflatex)
+  SDCC_REQUIRE_PROG($LATEX,      latex)
+  SDCC_REQUIRE_PROG($DVIPDFM,    dvipdfm)
   SDCC_REQUIRE_PROG($MAKEINDEX,  makeindex)
 fi
 
